# fork_ws

./: .gitignore  comment_racks.py  comment_racks_full.py  fix_racks_inline.py  launch_gazebo_simple.sh  launch_updated_warehouse.sh  remove_room_106.py  start_warehouse.sh  update_navigation_layout.py  update_racks.py  verify_warehouse.sh
src/harmonic_sim/: CMakeLists.txt  WAREHOUSE_SIMULATION_README.md  cheat_sheet.txt  package.xml  quick_start.sh  run_blueprint_simulation.sh  test_blueprint_warehouse.sh  test_simulation.sh  test_warehouse_simulation.sh
src/harmonic_sim/config/: nav2_params.yaml
src/harmonic_sim/config/backup/: nav.yaml
src/harmonic_sim/launch/: blueprint_warehouse.launch.py  blueprint_warehouse_detailed.launch.py  blueprint_warehouse_simple.launch.py  complete_warehouse_complex.launch.py  forklift_nav_simple.launch.py  gazebo_forklift.launch.py  kjore_gazebo_forklift.launch.py  nav_forklift_mppi.launch.py  nav_forklift_pro.launch.py  simple_gazebo.launch.py  warehouse_minimal.launch.py
src/harmonic_sim/launch/old/: alt_nav_forklift.launch.py  forklift_sim.launch.py  nav3_tester.launch.py  simple.launch.py
src/harmonic_sim/maps/: my_map_pro.pgm  my_map_pro.yaml
src/harmonic_sim/meshes/: kina_body_1_0_simple.stl  kina_body_1_1.stl
src/harmonic_sim/models/forklift/: model.config  model.sdf  (+1 more)
src/harmonic_sim/rviz2_configs/: mapping1.rviz  navigation.rviz
src/harmonic_sim/scripts/: generate_pallets.py  visualize_warehouse_layout.py
src/harmonic_sim/worlds/: blueprint_warehouse_detailed.world  blueprint_warehouse_detailed_backup.world
(+13 files in other folders)
